# 2nd_semestr

./: CMakeLists.txt  README.md  bitset_test.c  main.c  vector_test.c
DM/: DM.c  DM.h
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h  ordered_set.c  ordered_set.h  unordered_set.c  unordered_set.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h  bitset_1.c
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
string/: string_.c  string_.h
